--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,219 @@
 .conteiner {
-    width: min(100%, 1440px);
-    margin: auto;
-    padding-top: 138.4px;
+  width: min(100%, 1440px);
+  margin: auto;
+  padding-top: 138.4px;
 }
 /* header */
 header {
-    display: flex;
-    padding: 32px 80px;
-    background: #372D23;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    max-width: inherit;
-    width: inherit;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 0;
-    z-index: 1;
+  display: flex;
+  padding: 32px 80px;
+  background: #372d23;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  max-width: inherit;
+  width: inherit;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+  z-index: 1;
 }
 
 nav li:hover {
-   color: #ED6C30
+  color: #ed6c30;
 }
 
 ul {
-    display: flex;
-    font-size: 24px;
-    line-height: 32px;
+  display: flex;
+  font-size: 24px;
+  line-height: 32px;
 }
 
 li {
-    margin: 0 48px;
-    color: #B89278;
+  margin: 0 48px;
+  color: #b89278;
 }
 
 .active {
-    color: #ED6C30;
+  color: #ed6c30;
 }
 
 /*section1*/
 .section1 {
-    position: relative;
-
+  position: relative;
 }
 
-
 .textbutton {
-    position: absolute;
-    top: 50%;
-    /* transform: translateY(-50%); */
-    left: 50%;
-    transform: translateX(-50%);
-
+  position: absolute;
+  top: 50%;
+  /* transform: translateY(-50%); */
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 h2 {
-    color: #FFF;
-    text-shadow: 0px 6px 4px #372D23;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 56px;
-    margin-bottom: 32px;
+  color: #fff;
+  text-shadow: 0px 6px 4px #372d23;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  margin-bottom: 32px;
 }
 
 .button1 {
-    display: flex;
-    height: 52px;
-    padding: 12px 38px;
-    justify-content: center;
-    align-items: center;
-    border: 3px solid #FCC21B;
-    box-shadow: 0px 4px 4px 0px #372D23;
-    color: #FFF;
-    font-size: 20px;
-    background-color: transparent;
+  display: flex;
+  height: 52px;
+  padding: 12px 38px;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #fcc21b;
+  box-shadow: 0px 4px 4px 0px #372d23;
+  color: #fff;
+  font-size: 20px;
+  background-color: transparent;
 }
 
-button:hover{
-    color: rgb(239, 58, 38);
+button:hover {
+  color: rgb(239, 58, 38);
+  border-color: rgb(239, 58, 38);
+}
+
+/*section2*/
+.section2 {
+  padding: 80px;
+}
+
+.div_for_images {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+.img_div {
+  position: relative;
+}
+
+.blurdiv {
+  background: rgba(55, 45, 35, 0.8);
+  backdrop-filter: blur(2px);
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  column-gap: 16px;
+  justify-content: center;
+  height: 88px;
+}
+
+h5 {
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+article {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin: auto;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+h3 {
+  color: #372d23;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+}
+
+.section2_text {
+  color: #855c52;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+button {
+  display: flex;
+  padding: 12px 40px;
+  justify-content: center;
+  align-items: center;
+  background: #ed6c30;
+  border: none;
+}
+
+.button_text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.fa-solid {
+  display: flex;
+  font-size: 25px;
+  color: #ed6c30;
+  align-items: center;
+}
+
+.button_text:hover {
+  color: rgb(239, 58, 38);
+}
+
+/* footer */
+footer {
+  display: flex;
+  padding: 32px 300px;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  gap: 416px;
+  background: #372d23;
+}
+
+.footer_div_text {
+  width: 100%;
+  height: 100%;
+}
+
+h4 {
+  color: #fff;
+  text-align: start;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 16px;
+}
+
+.footer_text {
+  color: #b89278;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  white-space: nowrap;
+  margin-bottom: 8px;
+}
+
+.social_icons {
+  color: #fcc21b;
+  font-size: 25px;
+}
+
+.socials {
+  display: flex;
+  column-gap: 16px;
+}
+
+.contact_box {
+  width: 100%;
 }
